--- a/16.webpack-source/2.zf-pack-demo/src/index.less
+++ b/16.webpack-source/2.zf-pack-demo/src/index.less
@@ -1,3 +1,9 @@
 body{
   background-color:#ce40c2;
+  background-image: url('./public/img.jpg');
+}
+.class1{
+  width: 300px;
+  height: 300px;
+  background:url('./public/logo.svg');
 }
