--- a/33.ZFKT-TS/zfkt-front/src/pages/Home/HomeHeader/index.less
+++ b/33.ZFKT-TS/zfkt-front/src/pages/Home/HomeHeader/index.less
@@ -8,34 +8,34 @@
     box-sizing: border-box;
     z-index: 999;
     .header-logo{
-        height:1rem;
+        height:100px;
         background-color: @BG_COLOR;
         color:#FFFFFF;
         display:flex;
         justify-content: space-between;
         align-items: center;
         img{
-            width:2rem;
-            margin-left:.2rem;
+            width:200px;
+            margin-left:20px;
         }
         i{
-            font-size:.5rem;
-            margin-right:0.2rem;
+            font-size:50px;
+            margin-right:20px;
         }
     }
     .header-category{
         position: absolute;
         width:100%;
         left:0;
-        top:1rem;
-        padding:.1rem .5rem;
+        top:100px;
+        padding:10px 50px;
         background-color: @BG_COLOR;
         li{
-            line-height: .6rem;
+            line-height: 60px;
             text-align: center;
             color:#FFF;
-            font-size:.3rem;
-            border-top:.002rem solid lighten(@BG_COLOR,20%);
+            font-size:30px;
+            border-top: .2px solid lighten(@BG_COLOR,20%);
             &.active{
                 color:rebeccapurple;
                 font-weight: bold;
